styles/components/_post.scss
.content-fade {
    &:before {
        content: '';
        width: 100%;
        height: 100%;
        position: absolute;
        z-index: 1;
        left: 0;
        bottom: 0;
        background: linear-gradient(hsla(0, 0%, 100%, 0) 75%, #fff 85%);
    }
}

.post-preview {
    @extend .mb2;
    @extend .ba;
    @extend .b--white;
    @extend .flex;
    @extend .flex-column;

    box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    min-height: 50px;
    max-height: 325px;
    overflow: hidden;
    position: relative;
    text-overflow: ellipsis;
    content: '';

    .footer {
        position: absolute;
        bottom: 1.5em;
    }
}

.post-content {
    @extend .pa4;
    @extend .h-100;
    background: white;

    ul {
        padding-left: 2em;
    }

    .tag-image {
        width: 24px !important;
        padding-right: 5px;
    }
}

.no-style {
    margin: 0;
    padding: 0;
    font-size: inherit;
    color: inherit;

    &:hover {
        opacity: 1;
    }
}

.reply-content {
    p {
        @extend .mt2;
        @extend .mb0;
    }

    a {
        color: #079E99 !important;
    }

    blockquote {
        @extend .ml2;
        @extend .pl2;
        border-left: 3px solid #dbdbdb;
    }

}

.opening-post {
    @extend .mb2;
    margin-bottom: 20px;
}

.opening-post,
.post-reply,
.post-preview {
    cursor: default;
    word-break: break-word;
    a {
        @extend .dim;
        text-decoration: none;
        color: black;
    }

    object {
        a {
            color: #079E99;
        }
    }
}

.vote {
    svg {
        width: 0.625em;
    }
}

button.reply {
    @extend .dim;
    @extend .pointer;

    background: transparent;
    color: teal !important;
    border: 1px solid teal;
    border-radius: 4px;
    padding: 2px;
}

.post-reply {
    @extend .relative;

    border-color: #e3e3e3;

    .header {
        @extend .flex;
    }
}

.post-preview-content {
    min-height: 100px;
    max-height: 500px;
    // target first <p> for previews via rich text editor
    > p {
        margin: 0;
        padding: 0;
    }
}

.post-content-hover {
    background-color: #FAFAFA;
}

.child > .child,
.child > .child > .child > .child {
    //background: #fff;
    border-left: 1px solid #e8eaed;
}

/**
 5 levels deep
 */
.child,
.child > .child > .child,
.child > .child > .child > .child > .child {
    border-left: 1px solid #e0e1e4;
    //background-color: #f7f7f7;
}

